@@ -10,6 +10,9 @@ Release date: tba
 Core and Builtins
 -----------------
 
+- Issue #26574: Optimize ``bytes.replace(b'', b'.')`` and
+  ``bytearray.replace(b'', b'.')``. Patch written by Josh Snider.
+
 - Issue #26581: If coding cookie is specified multiple times on a line in
   Python source code file, only the first one is taken to account.
 
